Add CLI (Hdt2Store) for converting HDT files in stores.